--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "aulaenlanube\\tema8\\conectorMySQL\\mysql-connector-j-8.0.33.jar"
+        "aulaenlanube\\tema8\\conectorMySQL\\mysql-connector-j-8.0.33.jar",
+        "aulaenlanube\\tema8\\ConectorBCrypt\\jBCrypt-0.4.3.jar"
     ]
 }
