--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "QuicksortBurbujaSwing",
+            "request": "launch",
+            "mainClass": "aulaenlanube.tema9.ejercicios.QuicksortBurbujaSwing",
+            "projectName": "curso-programacion-java_ca609098"
+        },
+        {
+            "type": "java",
             "name": "QuicksortSwing",
             "request": "launch",
             "mainClass": "aulaenlanube.tema9.ejercicios.QuicksortSwing",
